--- a/yp_ds/one_hot_encoding.ipynb
+++ b/yp_ds/one_hot_encoding.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Function"
+    "# One-Hot Encoding Function"
    ]
   },
   {
@@ -296,9 +296,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>2202</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>76</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>renault 12tl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>2065</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>71</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>fiat 124b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>19.1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>3381</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>80</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>dodge aspen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>20.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>2830</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>78</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>audi 5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>377</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>mazda glc custom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>25.8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>2620</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>81</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>dodge aries wagon (sw)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1937</td>\n",
+       "      <td>14.2</td>\n",
+       "      <td>76</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>vw rabbit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>datsun b-210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>71</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth cricket</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>4746</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford country squire (sw)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
+       "186  27.0          4         101.0        83.0    2202          15.3   \n",
+       "52   30.0          4          88.0        76.0    2065          14.5   \n",
+       "316  19.1          6         225.0        90.0    3381          18.7   \n",
+       "274  20.3          5         131.0       103.0    2830          15.9   \n",
+       "377  31.0          4          91.0        68.0    1970          17.6   \n",
+       "340  25.8          4         156.0        92.0    2620          14.4   \n",
+       "197  29.0          4          90.0        70.0    1937          14.2   \n",
+       "204  32.0          4          85.0        70.0    1990          17.0   \n",
+       "56   26.0          4          91.0        70.0    1955          20.5   \n",
+       "43   13.0          8         400.0       170.0    4746          12.0   \n",
+       "\n",
+       "     model_year  origin                      name  \n",
+       "186          76  europe              renault 12tl  \n",
+       "52           71  europe                 fiat 124b  \n",
+       "316          80     usa               dodge aspen  \n",
+       "274          78  europe                 audi 5000  \n",
+       "377          82   japan          mazda glc custom  \n",
+       "340          81     usa    dodge aries wagon (sw)  \n",
+       "197          76  europe                 vw rabbit  \n",
+       "204          76   japan              datsun b-210  \n",
+       "56           71     usa          plymouth cricket  \n",
+       "43           71     usa  ford country squire (sw)  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "url = 'https://raw.githubusercontent.com/mwaskom/seaborn-data/master/mpg.csv'\n",
     "# https://raw.githubusercontent.com/mwaskom/seaborn-data/master/iris.csv\n",
@@ -308,12 +496,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>name</th>\n",
+       "      <th>cylinders_4</th>\n",
+       "      <th>cylinders_6</th>\n",
+       "      <th>cylinders_5</th>\n",
+       "      <th>cylinders_8</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>2202</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>76</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>renault 12tl</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>2065</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>71</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>fiat 124b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>19.1</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>3381</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>80</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>dodge aspen</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>20.3</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>2830</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>78</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>audi 5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>377</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>mazda glc custom</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>25.8</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>2620</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>81</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>dodge aries wagon (sw)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1937</td>\n",
+       "      <td>14.2</td>\n",
+       "      <td>76</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>vw rabbit</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>japan</td>\n",
+       "      <td>datsun b-210</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>71</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>plymouth cricket</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>4746</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>usa</td>\n",
+       "      <td>ford country squire (sw)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mpg  displacement  horsepower  weight  acceleration  model_year  origin  \\\n",
+       "186  27.0         101.0        83.0    2202          15.3          76  europe   \n",
+       "52   30.0          88.0        76.0    2065          14.5          71  europe   \n",
+       "316  19.1         225.0        90.0    3381          18.7          80     usa   \n",
+       "274  20.3         131.0       103.0    2830          15.9          78  europe   \n",
+       "377  31.0          91.0        68.0    1970          17.6          82   japan   \n",
+       "340  25.8         156.0        92.0    2620          14.4          81     usa   \n",
+       "197  29.0          90.0        70.0    1937          14.2          76  europe   \n",
+       "204  32.0          85.0        70.0    1990          17.0          76   japan   \n",
+       "56   26.0          91.0        70.0    1955          20.5          71     usa   \n",
+       "43   13.0         400.0       170.0    4746          12.0          71     usa   \n",
+       "\n",
+       "                         name  cylinders_4  cylinders_6  cylinders_5  \\\n",
+       "186              renault 12tl            1            0            0   \n",
+       "52                  fiat 124b            1            0            0   \n",
+       "316               dodge aspen            0            1            0   \n",
+       "274                 audi 5000            0            0            1   \n",
+       "377          mazda glc custom            1            0            0   \n",
+       "340    dodge aries wagon (sw)            1            0            0   \n",
+       "197                 vw rabbit            1            0            0   \n",
+       "204              datsun b-210            1            0            0   \n",
+       "56           plymouth cricket            1            0            0   \n",
+       "43   ford country squire (sw)            0            0            0   \n",
+       "\n",
+       "     cylinders_8  \n",
+       "186            0  \n",
+       "52             0  \n",
+       "316            0  \n",
+       "274            0  \n",
+       "377            0  \n",
+       "340            0  \n",
+       "197            0  \n",
+       "204            0  \n",
+       "56             0  \n",
+       "43             1  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "one_hot_encoder(data=dft, col_name='cylinders')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
