Updates the Ideas sections

--- a/wheely_test.ipynb
+++ b/wheely_test.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Foreword\n",
+    "\n",
+    "Thank you for giving me the opportunity to take this test. I appreciate your efforts on reviewing it and would be grateful for any feedback."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -10,9 +26,10 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import scipy\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import scipy"
+    "import seaborn as sns"
    ]
   },
   {
@@ -29,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 1"
+    "# Exercise 1: SQL"
    ]
   },
   {
@@ -138,6 +155,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Ideas\n",
+    "- Simulate data within the given logical schema i.e. create an artifical database. Use it to test the queries above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercise 2: Debugging\n",
     "\n",
     ">You are working on a project for which you have to transfer a dashboard from an old source to a new source. You realise that there are some discrepancies between the two sources and have access to log-level data for both sources. Please describe in a short manner how you would investigate the discrepancies in order to find the root cause."
@@ -151,12 +176,12 @@
     "- there are no obvious error messages that can quickly led to a reason of disrepancy,\n",
     "- 'access to log-level data' means the ability to audit the data sources in details.\n",
     "\n",
-    "Based on the above, I'd take the top-down narrowing focus approach i.e. I'd investigate into the discerancy as seen at the dashboard level and down to its possible reasons at the source layer. Thus, the course of actions would be\n",
-    "1. Formulate what the disrepancy is, it might help later to communicate with colleagues and/or fill-in tasks, tickets etc.\n",
-    "2. Review the dashboard's code for any obvious operations that can be associated with the disrepancy.\n",
-    "3. If some lines of codes are believed to be associated with the issue, project its logic to specific objects at the source (specific tables, columns etc)\n",
-    "4. Check the _structure_ and the _content_ of the specific objects at both the sources, compare them for any difference that can be the reason.\n",
-    "5. Assuming the reason is found, discuss and apply an appropriate fix.\n",
+    "Based on the above, I'd take the top-down narrowing focus approach i.e. I'd investigate into the discerancy as seen at the dashboard level and down to its possible reasons at the source layer. Thus, my course of actions would be\n",
+    "1. Formulate what the disrepancy is, it may be helpful later while communicating with colleagues and/or fill-in tasks, tickets etc.\n",
+    "2. Review the dashboard's code for any obvious operations that can be associated with the disrepancy, for any specific SQL statements, predicates, type conversions and so on.\n",
+    "3. Find some lines of codes that can be associated with the issue, project its logic to specific objects at the source (specific tables, columns etc)\n",
+    "4. Check the _structure_ and the _content_ of the specific objects at both the sources, compare them for any difference that lead to the disrepancy.\n",
+    "5. Assuming the reason is found, discuss and apply an appropriate fix: reconsilate the data structure, fix ETL jobs, amend SQL query and so on.\n",
     "\n",
     "If it is not feasible to locate any specific objects as in assocoiated with the disrepancy, one can just compare the logical schemas of both the sources. There are tools for that or one can use the metadata (usually, available for a matured storage) to do it in a manual way."
    ]
@@ -176,18 +201,19 @@
    "source": [
     "The key requirements here are the performance 'Master' report for the business. Therefore, it should not be a low-level one and should demonstrate how the company is performing from the business point of view. Usually, these metrics are discussed and selected together with a business party.\n",
     "\n",
-    "The main idea put into designing such a dashboard would be that individual metrics can reflect import trends and the metrics can be considered together as well.\n",
+    "The main idea put into designing such a dashboard would be that individual metrics reflect important trends and, _moreover_, the metrics can be considered together as well. The dashboard should not be clattered with details as it will complicate its comprehension, there should be designed other dashboards to answer questions potentially imposed by the 'Mater' dashboard's metrics in greater details.\n",
     "\n",
     "In the case of Wheely, I'd think of the following metrics\n",
     "- Financial ones: average check, total income (over period), total loss (if there are any charges, fines etc),\n",
-    "- Operational ones: number of clients, number of drivers, average waiting time, average driving time."
+    "- Operational ones: number of clients, number of drivers, average waiting time, average driving time, average mileage,\n",
+    "- Organizational: number of open positions, open tickets vs. tickets in progress across all projects etc."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 4\n",
+    "# Exercise 4: A/B Testing\n",
     "\n",
     ">You have been working with a product manager on an A/B test aiming at increasing overall revenue generated. You have been provided with a dataset with some metrics at user level covering the period of the test (see ex4 file). Please provide an analysis of the A/B test and give some recommendations to the product manager."
    ]
@@ -576,28 +602,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ideas:\n",
-    "- we can conduct a bootstrap testing under the same null hypothesis to check if the result will be consistent with the above."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Conclusion\n",
     "\n",
     "The 'variant' scenario provides greater mean of revenue (thus, more revenue in total), this is statistically significant (at the level $\\alpha$=0.05). Practically-wise, it is a bit more complicated because there are six outliers in the control group which account for 12.4% of the total revenue. If they are typical for the 'control' scenario but excluded in the 'variant' case, the total revenue might be smaller in the 'variant' case in the long-run term.\n",
     "\n",
     "The recommendations are\n",
-    "- to explain what the extremely high values 'rev_gbp' in the control group are, whether they are typical under certain circumstances,\n",
-    "- to keep the 'variant' scenario but ensure it allows for the exteremly high values (see above) if they are not random."
+    "- to explain what the extremely high values of 'rev_gbp' in the control group are, whether they are typical under certain circumstances,\n",
+    "- to keep the 'variant' scenario but ensure it allows for the exteremly high values (see above) if they are not random,\n",
+    "- if this is not possible to explain the extremely high values of 'rev_gbp' but the feeling is they are not random, stay with the 'control' scenario for the time being, do not switch to the 'variant' one as the total revenue might be larger in the former case."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 5\n",
+    "## Ideas\n",
+    "\n",
+    "- Conduct alternative statistical procedures under the null hypothesis to see whether they will provide consistent results: the bootstrap testing, the bayesian inference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 5: Machine Learning\n",
     "\n",
     ">You are given a dataset that consists of approximately 3000 customer reviews (input text), ratings, date of the review (see ex5 file). You need to build a model to predict the sentiment of the review (positive or negative). We consider ratings 4 and 5 as a positive review, all other ratings are negative. Please include your work in the Jupyter notebook with the analysis of this data, training and testing of the model. Also, at the end of your analysis, could you briefly describe the steps you would take in order to release the model on production."
    ]
@@ -749,16 +777,16 @@
     {
      "data": {
       "text/plain": [
-       "939     Good sound. Like it for music and scheduling. ...\n",
-       "2713    Super easy to hook up and program. I use the m...\n",
-       "1462    Love it very much, still learning everything t...\n",
-       "762                       You’re all I need...na na nana!\n",
-       "908                                    Home entertainment\n",
-       "651                                           Works great\n",
-       "171         Super easy set up and am loving our new Echo!\n",
-       "517     I think I now have 5 of these throughout the h...\n",
-       "1476    I already had purchased the Echo and a couple ...\n",
-       "2442    Easy set up, nice looking interface and I like...\n",
+       "1110                                                 Nice\n",
+       "2987    I like the compact structure of the Dot. The s...\n",
+       "2585    Primarily for music in our bedroom.  I wish th...\n",
+       "912                     Great sound from a little speaker\n",
+       "2082    It's louder than the dot and it's got a built ...\n",
+       "3057    Great to play music throughout the house. Grea...\n",
+       "1813    Its work perfect an I must introduce the rest ...\n",
+       "2438                                            I love it\n",
+       "872                                         Entertainment\n",
+       "193                       Love it!  So do the grandkids!!\n",
        "Name: verified_reviews, dtype: object"
       ]
      },
@@ -861,16 +889,16 @@
      "text": [
       "Number of reviews without any normalized text: 79\n",
       "     verified_reviews normalized_review feedback\n",
-      "1151                              *NaT*        1\n",
-      "2244                              *NaT*        0\n",
-      "2455                              *NaT*        1\n",
-      "2014                              *NaT*        1\n",
-      "1354                              *NaT*        1\n",
-      "3123                              *NaT*        1\n",
-      "1321                              *NaT*        1\n",
-      "1987                              *NaT*        1\n",
-      "2763                              *NaT*        1\n",
-      "1558                              *NaT*        0\n"
+      "219                               *NaT*        1\n",
+      "1558                              *NaT*        0\n",
+      "1513                              *NaT*        1\n",
+      "1420                              *NaT*        1\n",
+      "878                               *NaT*        1\n",
+      "3083                              *NaT*        1\n",
+      "3114                              *NaT*        1\n",
+      "2221                              *NaT*        0\n",
+      "1461                              *NaT*        1\n",
+      "374                               *NaT*        0\n"
      ]
     }
    ],
@@ -939,11 +967,11 @@
     {
      "data": {
       "text/plain": [
-       "[('house', 0.9999237656593323),\n",
-       " ('time', 0.9999100565910339),\n",
-       " ('echo', 0.9998828768730164),\n",
-       " ('love', 0.9998825788497925),\n",
-       " ('feature', 0.9998798966407776)]"
+       "[('buy', 0.9999156594276428),\n",
+       " ('able', 0.9999145865440369),\n",
+       " ('music', 0.9999144077301025),\n",
+       " ('device', 0.9999054074287415),\n",
+       " ('clock', 0.9999039173126221)]"
       ]
      },
      "execution_count": 27,
@@ -1025,7 +1053,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   5 out of   5 | elapsed:    2.7s finished\n"
+      "[Parallel(n_jobs=4)]: Done   5 out of   5 | elapsed:    5.5s finished\n"
      ]
     },
     {
@@ -1129,15 +1157,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusion**\n",
-    "\n",
-    "We took a basic approach with verctorizing feedbacks and using Logistic Regression to predict the class of feedback. The AUC score is not great so probably need to investigate into better approaches (other ways of representing feedbacks numerically (word2vec&), other models etc)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## DL with Embeddings"
    ]
   },
@@ -1148,6 +1167,15 @@
    "outputs": [],
    "source": [
     "# TBC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "We took a basic approach with verctorizing feedbacks and using Logistic Regression to predict the class of feedback. The AUC score is not great so probably need to investigate into better approaches (other ways of representing feedbacks numerically (word2vec&), other models etc)."
    ]
   },
   {
